# egui_glfw_gl

./: Cargo.toml  LICENSE  README.md
examples/demo/: main.rs  triangle.rs
src/: lib.rs  painter.rs
src/shader/: fragment.frag  vertex.vert
